--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot Interface</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
-    <script src="information.js"></script>
+    <link rel="stylesheet" href="/static/styles.css">
+    <script src="/static/script.js"></script>
+    <script src="/static/information.js"></script>
 </head>
 <body>
     <div class="chatbot-container">
