--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
         <div class="chatbot-container">
             <div class="chatbot-header">
-                <h2>대입 전문 Chatbot Test</h2>
+                <h2>대입 전문 Chatbot</h2>
             </div>
             <div class="chatbot-messages" id="chatbot-messages"></div>
             <div class="chatbot-input">
