--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
         <div class="chatbot-container">
             <div class="chatbot-header">
                 <h2>대입 전문 Chatbot</h2>
+                <h3>LLM을 통해 하자</h3>
             </div>
             <div class="chatbot-messages" id="chatbot-messages"></div>
             <div class="chatbot-input">
